# APC-UPS-template-zabbix

./: Cargo.toml  README.md
pyupszabbix/: getstateups.py
src/: lib.rs.old  main.rs
