[package]
name = "rups-tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
json = "*"
clap = { version = "4.0.19", features = ["derive"] }
async-trait = "0.1.64"
futures = "0.3"